--- a/PowerPaint/PowerPaint.csproj
+++ b/PowerPaint/PowerPaint.csproj
@@ -109,6 +109,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MyRectangle.cs" />
+    <Compile Include="WinOptions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WinOptions.Designer.cs">
+      <DependentUpon>WinOptions.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainWin.resx">
       <DependentUpon>MainWin.cs</DependentUpon>
     </EmbeddedResource>
@@ -121,6 +127,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="WinOptions.resx">
+      <DependentUpon>WinOptions.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
